# uRing

./: .gitignore  README.md
Crawler/: .env.example  .gitignore  AWS.tf  Cargo.toml  README.md
Crawler/data/: config.toml  locale.toml  seed.toml  siteMap.json
Crawler/src/: config.rs  error.rs  handler.rs  lambda.rs  lambda_main.rs  lib.rs  locale.rs  logging.rs  main.rs
Crawler/src/lambda/: mod.rs
Crawler/src/models/: campus.rs  config.rs  crawler.rs  mod.rs  notice.rs  seed.rs  selectors.rs
Crawler/src/pipeline/: archive.rs  circuit_breaker.rs  crawl.rs  diff.rs  index.rs  load.rs  map.rs  mod.rs  pipeline.rs  validate.rs
Crawler/src/services/: boards.rs  departments.rs  mod.rs  notices.rs  selectors.rs
Crawler/src/storage/: local.rs  mod.rs  s3.rs
Crawler/src/utils/: http.rs  log.rs  mod.rs  url.rs  url_utils.rs
Crawler/storage/: config.toml  current.json
Mapper/: .gitignore  Cargo.toml  README.md  get_useful_boards.py
Mapper/data/: config.toml  seed.toml
Mapper/src/: config.rs  error.rs  http.rs  main.rs  models.rs  selectors.rs
Mapper/src/crawlers/: boards.rs  departments.rs  mod.rs
Mapper/src/models/: config.rs  discovery.rs  mod.rs  seed.rs
Mapper/src/services/: boards.rs  departments.rs  mod.rs  selectors.rs
Mapper/src/utils/: fs.rs  http.rs  mod.rs  url.rs
Viewer/: .gitignore  README.md  package-lock.json  package.json
Viewer/public/data/: notices.json
Viewer/scripts/: sync-crawler-data.js
Viewer/src/app/: globals.css  layout.tsx  page.tsx
Viewer/src/core/constants/: env.ts  locale.ts
Viewer/src/core/lib/: api.ts
Vision/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Vision/public/v1/: current.json
Vision/public/v1/stacks/2025/: 12.json
Vision/public/v1/stacks/2026/: 01.json  02.json
Vision/src/app/: globals.css  layout.tsx  page.tsx
Vision/src/components/home/: FilterSidebar.tsx  HeroSection.tsx  NoticeCard.tsx  NoticeList.tsx  index.ts
Vision/src/components/ui/: Chip.tsx  EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  MetaPill.tsx  Spinner.tsx  StatCard.tsx  Tag.tsx  index.ts
Vision/src/core/config/: env.ts  locale.ts
Vision/src/core/network/: api.ts
Vision/src/hooks/: index.ts
Vision/src/hooks/common/: useIntersectionObserver.ts
Vision/src/hooks/notices/: useInfiniteNotices.ts  useNoticeFilters.ts  useNoticeStats.ts  useNotices.ts  useNoticesByMonth.ts
Vision/src/lib/: client.ts
Vision/src/lib/utils/: filters.ts  stats.ts
Vision/src/services/: notice.ts
Vision/src/types/: api.ts  filter.ts  notice.ts
