# -------------------------------------------------
# Package metadata
# -------------------------------------------------

[package]
name = "crawler"
version = "0.1.0"
description = "Crawls Yonsei University campus boards for notices"

# MIT License
license = "MIT"

# Default Behavior
default-run = "crawler"

# Rust Edition
edition = "2024"

# -------------------------------------------------
# Binary targets
# -------------------------------------------------

[[bin]]
name = "crawler"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "crawler-lambda"
path = "src/bin/lambda.rs"
required-features = ["lambda"]

# -------------------------------------------------
# Features for optional dependencies
# -------------------------------------------------

[features]
default = ["cli", "map"]
cli = ["dep:clap", "dep:env_logger"]
map = [] # Mapping features for board & department discovery
lambda = [
    "dep:lambda_runtime",
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:tracing",
    "dep:tracing-subscriber",
]
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

# -------------------------------------------------
# Dependencies
# -------------------------------------------------

[dependencies]
# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "io-util",
] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTML parsing
scraper = "0.22"
url = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Misc
regex = "1"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
unicode-segmentation = "1.12"

# AWS Serverless
lambda_runtime = { version = "0.13", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

# Tracing for logging in Lambda
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
    "json",
] }

[dev-dependencies]
tempfile = "3"
